@@ -1,5 +1,9 @@
 2004-09-28  Damien Sandras  <dsandras@gnome.org>
 
+	* src/main_window.cpp: Calls the selected URL in a combo box.
+
+2004-09-28  Damien Sandras  <dsandras@gnome.org>
+
 	* src/calls_history_window.cpp, src/calls_history_window.h, 
 	src/main_window.cpp: Reimplemented a combo box.
 
